--- a/src/views/pay.html
+++ b/src/views/pay.html
@@ -132,7 +132,7 @@
                             paySign: res.result.paySign
                         },
                         res => {
-                            //支付成功或失败前台判断
+                            window.location.href='"https://mp.weixin.qq.com/s/xHSFwvtK9V1uDRgrqcao2w'
                         });
                 }
             })
