--- a/src/views/pay.html
+++ b/src/views/pay.html
@@ -115,7 +115,7 @@
             $.ajax({
                 type: 'POST',
                 data: search,
-                url: "https://wxp.sharkmeida.cn/api/wxpay/prepay",
+                url: "https://wp.sharkmeida.cn/api/wxpay/prepay",
                 success: function (res) {
                     WeixinJSBridge.invoke(
                         "getBrandWCPayRequest",
